--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -1,10 +1,12 @@
-family-sans = "Ubuntu", "Roboto", "Open Sans", "Microsoft YaHei", sans-serif
+family-sans = "Noto Sans SC Sliced", "Lato", "Microsoft YaHei", sans-serif
 family-mono = "Source Code Pro", monospace, "Microsoft YaHei"
 gap = 64px
 screen-tablet = 769px
 screen-desktop = 1088px
 screen-widescreen = 1280px
 screen-fullhd = 1472px
+
+@import url(//fonts.geekzu.org/earlyaccess/notosansscsliced.css);
 
 /* ---------------------------------
  *       Override CSS Framework
