--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -249,6 +249,9 @@ img.thumbnail
 .is-size-7
     font-size: 0.85rem !important
 
+.is-size-4
+    font-weight:300
+
 .is-7by1
     padding-top: 42.8%
     img
@@ -292,7 +295,7 @@ img.thumbnail
     margin-bottom: 0.5em !important
 
 .has-mr-7
-    margin-right: 0.25em !important
+    margin-right:7px 
 
 .has-link-grey,
 .has-link-black-ter
@@ -434,7 +437,17 @@ figure.highlight
 	width: 100%;
 	height: 100%;
 }
-
+.card-content{
+    .level-item{
+        line-height:2;
+        .fa-map-marker-alt {
+            font-size: 12px;
+            line-height: 29px;
+            display: inline-block;
+            float: left;
+        }
+    }
+}
 /* ---------------------------------
  *        Fix Gist Snippet
  * --------------------------------- */
