--- a/layout/common/article.ejs
+++ b/layout/common/article.ejs
@@ -37,7 +37,7 @@
             </div>
         </div>
         <% } %>
-        <h1 class="title is-size-3 is-size-4-mobile has-text-weight-normal">
+        <h1 class="title is-size-3 is-size-4-mobile">
             <% if (index) { %>
                 <a class="has-link-black-ter" href="<%- url_for(post.link ? post.link : post.path) %>"><%= post.title %></a>
             <% } else { %>
